--- a/styles/font/font.scss
+++ b/styles/font/font.scss
@@ -1,4 +1,4 @@
-// /* 在App.vue的style标签中 */
+// // /* 在App.vue的style标签中 */
 // @font-face {
 //   font-family: 'PingFang';
 //   font-weight: normal;
